--- a/src/pages/list/style.css
+++ b/src/pages/list/style.css
@@ -18,23 +18,35 @@ table {
 
 th,
 td {
-    border: 1px solid #ddd;
+    border: 1px solid;
     padding: 8px;
-    text-align: left;
+    text-align: center;
+    white-space: nowrap;
+    border-color: #b0b0b0;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #b0b0b0;
     color: #000;
 }
 
 button {
     cursor: pointer;
     padding: 5px 10px;
-    margin-right: 5px;
-    width: 50%;
+    width: 40%;
 }
 
 button:hover {
     background-color: #ddd;
+}
+
+.deleteButton {
+    background-color: #f44336;
+    color: #fff;
+    border-color: #f44336;
+}
+
+.deleteButton:hover {
+    background-color: #da190b;
+    border-color: black;
 }
