--- a/src/pages/options/styles.css
+++ b/src/pages/options/styles.css
@@ -47,3 +47,66 @@ input {
     width: 70%;
     font-size: 1rem;
 }
+
+.liga-desliga {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+    text-align: center;
+}
+
+.liga-desliga_checkbox {
+    left: -9999px;
+    position: absolute;
+}
+
+.liga-desliga_botao {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    cursor: pointer;
+}
+
+.liga-desliga_botao::before,
+.liga-desliga_botao::after {
+    content: "";
+    transition: all 0.3s ease;
+}
+
+.liga-desliga_botao::before {
+    display: inline-block;
+    width: 3em;
+    height: 1.5em;
+    background-color: #900;
+    border-radius: 1em;
+}
+
+.liga-desliga_botao::after {
+    display: inline-block;
+    position: absolute;
+    top: 0.0;
+    left: 0.0;
+    width: 1.45em;
+    height: 1.45em;
+    background-color: #fff;
+    border-radius: 100%;
+}
+
+.liga-desliga_checkbox:checked + .liga-desliga_botao::after {
+    left: 1.525em;
+}
+
+.liga-desliga_checkbox:checked + .liga-desliga_botao::before {
+    background-color: #090;
+}
+
+/* .liga-desliga_checkbox:focus + .liga-desliga_botao::before {
+    outline: 3px dotted #CCC;
+} */
+
+.title-config {
+    font-size: 1.5rem;
+    margin: 0;
+    margin-bottom: 0.5rem;
+}
