--- a/src/pages/list/styles.css
+++ b/src/pages/list/styles.css
@@ -51,6 +51,18 @@ button:hover {
     border-color: black;
 }
 
+
+.reload{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin-right: 1em;
+}
+
+.icon-reload{
+    cursor: pointer;
+}
+
 .hidden {
     display: none;
 }
