--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -73,6 +73,11 @@ body {
     background-color: darkgreen;
 }
 
+.btnsTextArea{
+    display: flex;
+    flex-direction: row;
+}
+
 h2 {
     color: #fff;
     font-size: 1.5rem;
