--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -48,30 +48,31 @@ body {
     font-size: 1rem;
     cursor: pointer;
     margin: 0 0.5rem;
+    transition: 0.1s all ease-in-out;
 }
 
 .btn:hover {
-    background-color: darkgreen;
-    color: #fff;
+    filter: brightness(1.2);
+    transform: scale(1.04);;
 }
 
 .btn#btnWord, 
 .btn#btnTable {
     background-color: rgb(78, 116, 186);
 }
-
+/* 
 .btn#btnWord:hover, 
 .btn#btnTable:hover {
     background-color: darkgreen;
-}
+} */
 
 .btn#btnPptx {
     background-color: rgb(193, 61, 61);
 }
-
+/* 
 .btn#btnPptx:hover {
     background-color: darkgreen;
-}
+} */
 
 .btnsTextArea{
     display: flex;
