--- a/src/pages/list/styles.css
+++ b/src/pages/list/styles.css
@@ -30,16 +30,6 @@ th {
     color: #000;
 }
 
-button {
-    cursor: pointer;
-    padding: 5px 10px;
-    width: 40%;
-}
-
-button:hover {
-    background-color: #ddd;
-}
-
 .deleteButton {
     background-color: #f44336;
     color: #fff;
@@ -71,13 +61,14 @@ button:hover {
     border-radius: 0.5rem;
     font-size: 1rem;
     cursor: pointer;
+    margin: 0 0.5rem;
     margin-inline-start: 11.12%;
-    width: 20%;
+    transition: 0.1s all ease-in-out;   
 }
 
 .btn:hover {
-    background-color: darkgreen;
-    color: #fff;
+    filter: brightness(1.2);
+    transform: scale(1.04);;
 }
 
 .hidden {
