--- a/src/pages/options/styles.css
+++ b/src/pages/options/styles.css
@@ -174,6 +174,11 @@ input {
     background-color: rgb(148, 228, 255);
 }
 
+.btnsFree {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
 
 .hidden {
     display: none;
